Fix the icons in the buttons on Safari
[Fixes #151107745](https://www.pivotaltracker.com/story/show/151107745)

--- a/src/components/assets/Icons.css
+++ b/src/components/assets/Icons.css
@@ -445,11 +445,11 @@
   stroke-width: 0.5;
 }
 
-.PostActionButton > .BrowseIcon > g {
+.PostActionButton .BrowseIcon > g {
   fill: transparent;
 }
 
-.PostActionButton > .XIconLG {
+.PostActionButton .XIconLG {
   margin-top: -2px;
   margin-left: -2px;
 }
@@ -459,7 +459,7 @@
   stroke: none;
 }
 
-.PostActionButton > .SVGIcon > g {
+.PostActionButton .SVGIcon > g {
   stroke: #fff;
 }
 
